# cli-todo-demo

./: Cargo.toml
docs/: presentation.html  presentation.md
src/: cli.rs  main.rs  storage.rs  task.rs
