[package]
name = "cli-todo-demo-2"
version = "0.1.1"
edition = "2021"
description = "A simple CLI TODO list manager"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
